All modofications to orginal code

--- a/env.yaml
+++ b/env.yaml
@@ -22,6 +22,6 @@ dependencies:
       - streamlit
       - streamlit_extras
       - tokenizers
-      - transformer_lens
+        # - transformer_lens
       - transformers
       - pytest  # fixes wrong dependencies of transformer_lens
